force-app/main/default/objects/Quote_Home__dlm/fields/SumBudgetTotalActuel_c__c.field-meta.xml
<CustomField>
    <fullName>SumBudgetTotalActuel_c__c</fullName>
    <label>Budget Total Actuel (€HT/an)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Budget Total Actuel (€HT/an)</labelOverride>
        <masterLabel>Budget Total Actuel (€HT/an)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>