force-app/main/default/objects/Quote_Home__dlm/fields/SumEconomieIdentifiee_c__c.field-meta.xml
<CustomField>
    <fullName>SumEconomieIdentifiee_c__c</fullName>
    <label>Économie Totale Identifiée</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Économie Totale Identifiée</labelOverride>
        <masterLabel>Économie Totale Identifiée</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>