force-app/main/default/objects/Quote_Home__dlm/fields/TECH_AccountRecordTypeName_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_AccountRecordTypeName_c__c</fullName>
    <label>Account RecordTypeName</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Account RecordTypeName</labelOverride>
        <masterLabel>Account RecordTypeName</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>