force-app/main/default/objects/Quote_Home__dlm/fields/TECH_Enchere_capacite_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_Enchere_capacite_c__c</fullName>
    <label>TECH_Enchere_capacite</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TECH_Enchere_capacite</labelOverride>
        <masterLabel>TECH_Enchere_capacite</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>