force-app/main/default/objects/Quote_Home__dlm/fields/TECH_FournisseurLogo_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_FournisseurLogo_c__c</fullName>
    <label>TECH_Fournisseur Logo</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TECH_Fournisseur Logo</labelOverride>
        <masterLabel>TECH_Fournisseur Logo</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>