force-app/main/default/objects/Quote_Home__dlm/fields/TECH_OppId_fournisseur_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_OppId_fournisseur_c__c</fullName>
    <label>TECH OppId fournisseur</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TECH OppId fournisseur</labelOverride>
        <masterLabel>TECH OppId fournisseur</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>