force-app/main/default/objects/Quote_Home__dlm/fields/TECH_OppRecordTypeName_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_OppRecordTypeName_c__c</fullName>
    <label>Opp RecordTypeName</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Opp RecordTypeName</labelOverride>
        <masterLabel>Opp RecordTypeName</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>