force-app/main/default/objects/Quote_Home__dlm/fields/TECH_PropositionRenouvellement_c__c.field-meta.xml
<CustomField>
    <fullName>TECH_PropositionRenouvellement_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_Proposition De Renouvellement</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TECH_Proposition De Renouvellement</labelOverride>
        <masterLabel>TECH_Proposition De Renouvellement</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>