force-app/main/default/objects/Quote_Home__dlm/fields/Tech_situationActuelle_c__c.field-meta.xml
<CustomField>
    <fullName>Tech_situationActuelle_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech situation actuelle</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Tech situation actuelle</labelOverride>
        <masterLabel>Tech situation actuelle</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>