force-app/main/default/objects/Quote_Home__dlm/fields/TechnologieGarantieOrigine_c__c.field-meta.xml
<CustomField>
    <fullName>TechnologieGarantieOrigine_c__c</fullName>
    <label>Technologie</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Technologie</labelOverride>
        <masterLabel>Technologie</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>