force-app/main/default/objects/Quote_Home__dlm/fields/TotalBudgetHTT_c__c.field-meta.xml
<CustomField>
    <fullName>TotalBudgetHTT_c__c</fullName>
    <label>Total Budget HTT(€/an)</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Total Budget HTT(€/an)</labelOverride>
        <masterLabel>Total Budget HTT(€/an)</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>