force-app/main/default/objects/Quote_Home__dlm/fields/TotalBudgetTTC_c__c.field-meta.xml
<CustomField>
    <fullName>TotalBudgetTTC_c__c</fullName>
    <label>Total Budget TTC</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Total Budget TTC</labelOverride>
        <masterLabel>Total Budget TTC</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>