force-app/main/default/objects/Quote_Home__dlm/fields/TURPE_c__c.field-meta.xml
<CustomField>
    <fullName>TURPE_c__c</fullName>
    <label>TURPE</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TURPE</labelOverride>
        <masterLabel>TURPE</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>