force-app/main/default/objects/Quote_Home__dlm/fields/TypeOffre_c__c.field-meta.xml
<CustomField>
    <fullName>TypeOffre_c__c</fullName>
    <label>Type d&apos;Offre</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Type d&apos;Offre</labelOverride>
        <masterLabel>Type d&apos;Offre</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>