force-app/main/default/objects/Quote_Home__dlm/fields/url_offre_endesa_c__c.field-meta.xml
<CustomField>
    <fullName>url_offre_endesa_c__c</fullName>
    <label>Lien offre Endesa</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Lien offre Endesa</labelOverride>
        <masterLabel>Lien offre Endesa</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Url</type>
</CustomField>